# libjpeg_cpp

./: CMakeLists.txt  jpeg.cpp  jpeg.h
